--- a/02/styles.css
+++ b/02/styles.css
@@ -20,7 +20,7 @@ html {
     height: 30rem;
     border: 20px solid white;
     border-radius: 50%;
-    margin: 50px auto;
+    margin: 80px auto;
     position: relative;
     padding: 2rem;
     box-shadow:
@@ -43,4 +43,12 @@ html {
     background: black;
     position: absolute;
     top: 50%;
+    transform-origin: 100%; /* makes the line of the clock start rotating from its right edge */
+    transform: rotate(90deg); /* makes the line of the clock point to the top */
+    transition: all 0.5s;
+    transition-timing-function:cubic-bezier(0.2, 2.5, 0.60, 1)
+
+  }
+
+  .hour-hand{
   }
